Prevent zooming on mobile device

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<script src="js/jquery-1.12.0.min.js"></script>
 	<script src="js/screenfull.min.js" ></script>
 	<style type="text/css">
