--- a/index.html
+++ b/index.html
@@ -1,48 +1,50 @@
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<script src="js/jquery-1.12.0.min.js"></script>
-	<script src="js/screenfull.min.js" ></script>
-	<style type="text/css">
-    	html, body {
-    		height: 100%;
-    		margin: 0;
-    	}
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <script src="js/jquery-1.12.0.min.js"></script>
+    <script src="js/screenfull.min.js" ></script>
+    <link rel="stylesheet" type="text/css" href="css\style.css" />
+    <title>LCD Deadspot checker</title>
 </head>
 <body>
-	<div id="content" style="min-height: 100%; min-width: 100%">
-		<div id="fullscreen" style="width: 50%; height: 50%; position: absolute">
-		</div>
-		<div id="instruction" style="width: 50%; height: 50%; position: absolute; top: 0px; left: 50%">
-			<p>Instruction on here</p>
-		</div>
-		<div id="color-toggle" style="width: 100%; height: 50%; position: absolute; top: 50%; left: 0px">
-		</div>
-	</div>
-	<script>
-		var colorArray = ["#ffffff", "#000000", "#00ffff", "#ff00ff", "#ffff00", "#ff0000", "#00ff00", "#0000ff"];
-		var count = 1;
-		var isShow = true;
-		$('#fullscreen').click(function () {
-			screenfull.toggle(document.getElementById('content'));
-		});
-		$('#color-toggle').click(function (){
-			$('#content').css("background", colorArray[count]);
-			count++;
-			if (count == colorArray.length) {
-				count = 0;
-			}
-		});
-		$('#instruction').click(function () {
-			if (isShow) {
-				$(this).css("opacity", "0.0");
-				isShow = false;
-			} else {
-				$(this).css("opacity", "1.0");
-				isShow = true;
-			}
-		});
-	</script>
+    <div id="content">
+        <div id="fullscreen">
+        </div>
+        <div id="instruction">
+            <div id="instruction-content">
+                <div style="padding: 15px">
+                    <h3>Guide to use</h3>
+                    <p>Click here to hide</p>
+                    <img src="img/instruction.jpg" alt="Instruction"/>
+                </div>
+            </div>
+        </div>
+        <div id="color-toggle">
+        </div>
+    </div>
+    <script>
+        var colorArray = ["#ffffff", "#000000", "#00ffff", "#ff00ff", "#ffff00", "#ff0000", "#00ff00", "#0000ff"];
+        var count = 1;
+        var isShow = true;
+        $('#fullscreen').click(function () {
+            screenfull.toggle(document.getElementById('content'));
+        });
+        $('#color-toggle').click(function (){
+            $('#content').css("background", colorArray[count]);
+            count++;
+            if (count == colorArray.length) {
+                count = 0;
+            }
+        });
+        $('#instruction').click(function () {
+            if (isShow) {
+                $(this).css("opacity", "0.0");
+                isShow = false;
+            } else {
+                $(this).css("opacity", "1.0");
+                isShow = true;
+            }
+        });
+    </script>
 </body>
 </html>
