Change picture and alignment

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
         <div id="instruction">
             <div id="instruction-content">
-                <div style="padding: 15px">
+                <div style="padding: 15px; max-height: 100%">
                     <img src="img/instruction.jpg" alt="Instruction"/>
                 </div>
             </div>
